dashboard add product

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "mysql": "^2.16.0",
+    "primereact": "^3.1.0",
     "react": "^16.6.3",
     "react-bootstrap": "^0.32.4",
     "react-dom": "^16.6.3",
@@ -13,7 +14,10 @@
     "react-scripts": "2.1.1",
     "react-star-ratings": "^2.3.0",
     "redux": "^4.0.1",
-    "tedious": "^5.0.3"
+    "tedious": "^5.0.3",
+    "react-transition-group": "^2.5.1",
+    "classnames": "^2.2.6",
+    "primeicons": "^1.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
